Bug 124947 - Dialog theming/UX - Radio buttons are hard to use
Summary: Dialog theming/UX - Radio buttons are hard to use
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other other
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-25 07:53 UTC by Nicolas Christener
Modified: 2019-12-19 10:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
One area where I often have to tap multiple times in order to select an option (290.13 KB, image/png)
2019-04-25 07:56 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-04-25 07:53:59 UTC
Description:
The radio buttons in the iOS app look good and are drawn big enough to be used with a finger. However it seems that the area which actually reacts to a tap event is smaller than the element it self.

I often have to tap multiple times until a selection is actually made and it seems I have to perfectly hit the center of the circle.

I think that users get frustrated if they have to tap multiple times and therefore hope this can be improved.

Steps to Reproduce:
1. Open a tunneled dialog
2. Try to select an option with a radio button

Actual Results:
Often the selection isn't made with the first finger touch.

Expected Results:
The selection should always react on a finger touch.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-04-25 07:56:06 UTC
Created attachment 150998 [details]
One area where I often have to tap multiple times in order to select an option
Comment 2 How can I remove my account? 2019-04-25 08:54:09 UTC
Yep, it does feel like it requires unnecessarily exact touching of the button.
Comment 3 Tomaz Vajngerl 2019-06-06 04:13:43 UTC
Hmm. the hit area is shifted down. Fixing that should make it easier to hit a radio button easier.
Comment 4 Commit Notification 2019-06-06 13:49:46 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/302a00a3190743f5e6d2b61e5b40e493c4744b7e%5E%21

tdf#124947 fix hit area of the radio buttons, size in ios theme

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.