tdf#124947 fix hit area of the radio buttons, size in ios theme

The hit area of the radio buttons was not calculated correctly, so
sometimes when you hit the radio button at the "wrong" place,
nothing happened. This fixes the hit area to correctly cover the
radio button and the text.

Another issue was that the ios theme size of the radio button was
not defined correctly (32px instead of 26px), which increased the
error when calculating the hit are even more. The height of the
radio button should be the same as defined in the definition.xml,
and not bigger (or smaller).

Change-Id: I4b03f36ca9d9c82bd6dc442bd6e06af938c62bdd